crates/ao-tui/tests/snapshots/test_detail_panel__detail_panel_aspire_only.snap
---
source: crates/ao-tui/tests/test_detail_panel.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│>  auth  ▶ ○  feature/auth││  Branch     feature/auth                         │"
"│                          ││  Status     Running                              │"
"│                          ││  Agent      None                                 │"
"│                          ││  Uptime     10m 00s                              │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          │└──────────────────────────────────────────────────┘"
"│                          │┌ Agent Log [L] toggle ────────────────────────────┐"
"│                          ││ No log output                                    │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]op-in [L]og [M]ultipl"
