crates/ao-tui/tests/snapshots/test_detail_panel__detail_panel_with_uptime.snap
---
source: crates/ao-tui/tests/test_detail_panel.rs
expression: output
---
" AspireOrchestrator (Rust)                                                      "
"┌ Slots ───────────────────┐┌ Details ─────────────────────────────────────────┐"
"│>  auth  ▶ ●  feature/auth││  Branch     feature/auth                         │"
"│                          ││  Status     Running                              │"
"│                          ││  Agent      Active                               │"
"│                          ││  Uptime     2h 15m                               │"
"│                          ││  Agent Up   45m 00s                              │"
"│                          ││  Idle       30s ago                              │"
"│                          │└──────────────────────────────────────────────────┘"
"│                          │┌ Agent Log [L] toggle ────────────────────────────┐"
"│                          ││ No log output                                    │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"[N]ew [S]tart [K]ill [D]estroy [A]gent [R]ebase [G]push [P]op-in [L]og [?]help ["
